metadata/sf-prod/force-app/main/default/objects/Product2/fields/Migrated_From__c.field-meta.xml
<CustomField>
    <fullName>Migrated_From__c</fullName>
    <description>Source Salesforce system this record migrated from. Used to track the source and avoid creating multiple external IDs etc fields</description>
    <inlineHelpText>Source Salesforce system this record migrated from. Used to track the source and avoid creating multiple external IDs etc fields</inlineHelpText>
    <label>Migrated From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Migrated_From</valueSetName>
    </valueSet>
</CustomField>