metadata/sf-prod/force-app/main/default/objects/Product2/fields/Migration_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_SF_ID__c</fullName>
    <description>ID of the product in source migration Salesforce system. The source could be Aurea, IgniteTech, Influitive, etc. Avoid creating multiple Migration IDs</description>
    <externalId>true</externalId>
    <label>Migration SF ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>