metadata/sf-prod/force-app/main/default/objects/Product2/fields/Min_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Min_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Min Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>