metadata/sf-prod/force-app/main/default/objects/Product2/fields/NetSuite_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_ID__c</fullName>
    <description>The ID of the corresponding subscription plan in Netsuite.</description>
    <externalId>true</externalId>
    <inlineHelpText>The ID of the corresponding subscription plan in Netsuite.</inlineHelpText>
    <label>NetSuite ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>