metadata/sf-prod/force-app/main/default/objects/Product2/fields/NetSuite_SubscriptionPlan_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_SubscriptionPlan_ID__c</fullName>
    <label>NetSuite_SubscriptionPlan_ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>