metadata/sf-prod/force-app/main/default/objects/Product2/fields/Product_Edition__c.field-meta.xml
<CustomField>
    <fullName>Product_Edition__c</fullName>
    <label>Product Edition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Editions</valueSetName>
    </valueSet>
</CustomField>