metadata/sf-prod/force-app/main/default/objects/Product2/fields/Product_Edition_Label__c.field-meta.xml
<CustomField>
    <fullName>Product_Edition_Label__c</fullName>
    <label>Product Edition Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>