metadata/sf-prod/force-app/main/default/objects/Product2/fields/SBQQ__PriceEditable__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__PriceEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this product allows for price to be freely editable when building a quote</description>
    <inlineHelpText>Indicates this product allows for price to be freely editable when building a quote.</inlineHelpText>
    <label>Price Editable</label>
    <type>Checkbox</type>
</CustomField>