metadata/sf-prod/force-app/main/default/objects/Product2/fields/Subscription_Terms__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Terms__c</fullName>
    <label>Subscription Terms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Terms</valueSetName>
    </valueSet>
</CustomField>