metadata/sf-prod/force-app/main/default/objects/Product2/validationRules/ValidateSubscriptionTermsField.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateSubscriptionTermsField</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Billing_Term__c, &quot;Yearly&quot;),  INCLUDES(Subscription_Terms__c,&quot;1&quot;))</errorConditionFormula>
    <errorMessage>Subscription term 0 not allowed for Yearly billing term</errorMessage>
</ValidationRule>