metadata/sf-prod/force-app/main/default/objects/Product2/listViews/Accuris.listView-meta.xml
<ListView>
    <fullName>Accuris</fullName>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>NetSuite_ID__c</columns>
    <columns>NetSuite_SubscriptionPlan_ID__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Success_Level__c</columns>
    <columns>Floor_Price__c</columns>
    <columns>Min_Quantity__c</columns>
    <columns>Max_Quantity__c</columns>
    <columns>SBQQ__Component__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Accuris</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Accuris</label>
</ListView>