metadata/sf-prod/force-app/main/default/objects/Product2/listViews/Acorn.listView-meta.xml
<ListView>
    <fullName>Acorn</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product__c</columns>
    <columns>Product_Edition_Label__c</columns>
    <columns>Success_Level__c</columns>
    <columns>Deployment_Type__c</columns>
    <columns>NetSuite_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Acorn</value>
    </filters>
    <label>Acorn</label>
</ListView>