metadata/sf-prod/force-app/main/default/objects/Product2/listViews/ACRM.listView-meta.xml
<ListView>
    <fullName>ACRM</fullName>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>NetSuite_ID__c</columns>
    <columns>SBQQ__QuantityEditable__c</columns>
    <columns>Product__c</columns>
    <columns>SBQQ__Component__c</columns>
    <columns>Success_Level__c</columns>
    <columns>Deployment_Type__c</columns>
    <columns>Floor_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>ACRM</value>
    </filters>
    <label>ACRM</label>
</ListView>