metadata/sf-prod/force-app/main/default/objects/Product2/listViews/Active_Products.listView-meta.xml
<ListView>
    <fullName>Active_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>SBQQ__DefaultQuantity__c</columns>
    <columns>Min_Quantity__c</columns>
    <columns>SBQQ__QuantityScale__c</columns>
    <columns>NetSuite_ID__c</columns>
    <columns>Success_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Products</label>
    <sharedTo>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>