metadata/sf-prod/force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>NetSuite_ID__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product_Edition__c</columns>
    <columns>Success_Level__c</columns>
    <columns>PRODUCT2.REV_SCHEDULE_NUMBER</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>SBQQ__BillingType__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SBQQ__Component__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Products</label>
</ListView>