metadata/sf-prod/force-app/main/default/objects/Product2/listViews/AtHand.listView-meta.xml
<ListView>
    <fullName>AtHand</fullName>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>NetSuite_ID__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Success_Level__c</columns>
    <columns>SBQQ__Component__c</columns>
    <columns>Type__c</columns>
    <columns>Deployment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>AtHand</value>
    </filters>
    <label>AtHand</label>
</ListView>