metadata/sf-prod/force-app/main/default/objects/Product2/listViews/BiznessApps.listView-meta.xml
<ListView>
    <fullName>BiznessApps</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Product_Edition__c</columns>
    <columns>Product_Edition_Label__c</columns>
    <columns>Min_Quantity__c</columns>
    <columns>Success_Level__c</columns>
    <columns>SBQQ__BillingType__c</columns>
    <columns>SBQQ__ChargeType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>BiznessApps</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>BiznessApps</label>
</ListView>