metadata/sf-prod/force-app/main/default/objects/Product2/listViews/Bonzai.listView-meta.xml
<ListView>
    <fullName>Bonzai</fullName>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>NetSuite_ID__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>SBQQ__Component__c</columns>
    <columns>SBQQ__PricingMethod__c</columns>
    <columns>Product__c</columns>
    <columns>Success_Level__c</columns>
    <columns>Product_Edition_Label__c</columns>
    <columns>SBQQ__SubscriptionType__c</columns>
    <columns>Product_Edition__c</columns>
    <columns>Subscription_Terms__c</columns>
    <columns>SBQQ__SubscriptionPricing__c</columns>
    <columns>Floor_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Bonzai</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Bonzai</label>
</ListView>