metadata/sf-prod/force-app/main/default/objects/Product2/listViews/BroadVision.listView-meta.xml
<ListView>
    <fullName>BroadVision</fullName>
    <columns>NetSuite_ID__c</columns>
    <columns>NetSuite_SubscriptionPlan_ID__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product_Edition_Label__c</columns>
    <columns>Success_Level__c</columns>
    <columns>PRODUCT2.EXTERNAL_ID</columns>
    <columns>Deployment_Type__c</columns>
    <columns>SBQQ__SubscriptionTerm__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>Floor_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>BroadVision</value>
    </filters>
    <label>BroadVision</label>
</ListView>